Refactor: Implemented using middleware
